# platformer-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
outputs/configs/: holdout_generalization.json
outputs/metrics/: ablation_study_metrics.csv  holdout_generalization_metrics.csv  noise_robustness_metrics.csv  primary_benchmark_summary_metrics.csv  primary_risk_training_history.csv  primary_value_training_history.csv  seed_sweep_pairwise_advantage_metrics.csv  seed_sweep_raw_metrics.csv  seed_sweep_summary_metrics.csv  seed_sweep_training_history.csv  sensitivity_study_metrics.csv
src/platformer_lab/: __init__.py  __main__.py  artifacts.py  environment.py  evaluation.py  plots.py  settings.py  workflow.py
src/platformer_lab/assets/fonts/: OFL.txt
src/platformer_lab/controllers/: __init__.py  value_mpc.py  value_mpc_base.py  value_mpc_core.py  value_mpc_planning.py  value_mpc_training.py
